--- a/Foody.Web/Views/Home/Index.cshtml
+++ b/Foody.Web/Views/Home/Index.cshtml
@@ -3,3 +3,68 @@
 }
 
 <p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
+<p>Main page here</p>
