--- a/Foody.Web/Views/Administration/_RecipesPartial.cshtml
+++ b/Foody.Web/Views/Administration/_RecipesPartial.cshtml
@@ -1,30 +1,5 @@
-﻿<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
-<p>Recipes</p>
+﻿<section class="search-area">
+    <h4>Quick search</h4>
+
+    <input type="search" name="itemSearch" id="itemSearch" placeholder="Please enter the name of the desired recipe.." />
+</section>
