--- a/Foody.Web/Views/Administration/_FoodItemsPartial.cshtml
+++ b/Foody.Web/Views/Administration/_FoodItemsPartial.cshtml
@@ -8,7 +8,7 @@
     <h4>Food Items</h4>
 
     <ul>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
                 <h5>Add new Food Item</h5>
             </div>
@@ -76,9 +76,9 @@
                 <input type="submit" class="submit-button" value="Create Food Item" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Potato</p>
+                <p class="name-search">Potato</p>
                 <p>93 kcal per 100 grams</p>
                 <p>High Usage</p>
             </div>
@@ -146,9 +146,9 @@
                 <input type="submit" class="submit-button" value="Edit Food Item" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Tomato</p>
+                <p class="name-search">Tomato</p>
                 <p>18 kcal per 100 grams</p>
                 <p>High Usage</p>
             </div>
@@ -216,9 +216,9 @@
                 <input type="submit" class="submit-button" value="Edit Food Item" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Cucumber</p>
+                <p class="name-search">Cucumber</p>
                 <p>12 kcal per 100 grams</p>
                 <p>Medium Usage</p>
             </div>
@@ -286,9 +286,9 @@
                 <input type="submit" class="submit-button" value="Edit Food Item" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Yogurt</p>
+                <p class="name-search">Yogurt</p>
                 <p>61 kcal per 100 grams</p>
                 <p>Low Usage</p>
             </div>
