--- a/Foody.Web/Views/Administration/_MacroElementsPartial.cshtml
+++ b/Foody.Web/Views/Administration/_MacroElementsPartial.cshtml
@@ -8,7 +8,7 @@
     <h4>Macro Elements</h4>
 
     <ul>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
                 <h5>Add new Macro Element</h5>
             </div>
@@ -30,9 +30,9 @@
                 <input type="submit" class="submit-button" value="Create Macro Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Carbohydrates</p>
+                <p class="name-search">Carbohydrates</p>
                 <p>4 kcal per 100 grams</p>
             </div>
 
@@ -54,9 +54,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Fats</p>
+                <p class="name-search">Fats</p>
                 <p>9 kcal per 100 grams</p>
             </div>
 
@@ -78,9 +78,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Protein</p>
+                <p class="name-search">Protein</p>
                 <p>4 kcal per 100 grams</p>
             </div>
 
@@ -102,9 +102,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Water</p>
+                <p class="name-search">Water</p>
                 <p>0 kcal per 100 grams</p>
             </div>
 
