--- a/Foody.Web/Views/Administration/_MicroElementsPartial.cshtml
+++ b/Foody.Web/Views/Administration/_MicroElementsPartial.cshtml
@@ -8,7 +8,7 @@
     <h4>Micro Elements</h4>
 
     <ul>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
                 <h5>Add new micro element</h5>
             </div>
@@ -30,9 +30,9 @@
                 <input type="submit" class="submit-button" value="Create Micro Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin B12</p>
+                <p class="name-search">Vitamin B12</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
@@ -55,9 +55,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin B1</p>
+                <p class="name-search">Vitamin B1</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
@@ -80,9 +80,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin B2</p>
+                <p class="name-search">Vitamin B2</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
@@ -105,9 +105,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin B3</p>
+                <p class="name-search">Vitamin B3</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
@@ -130,9 +130,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin C</p>
+                <p class="name-search">Vitamin C</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
@@ -155,9 +155,9 @@
                 <input type="submit" class="submit-button" value="Edit Element" />
             </form>
         </li>
-        <li>
+        <li class="items-area-item">
             <div class="toggle-area">
-                <p>Vitamin B9 (Folate)</p>
+                <p class="name-search">Vitamin B9 (Folate)</p>
                 <p>Vitamin</p>
                 <p>High Usage</p>
             </div>
