--- a/Foody.Web/Views/Shared/_Layout.cshtml
+++ b/Foody.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Foody.Web</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.scss" />
 </head>
 <body>
     <header class="site-header">
