--- a/Foody.Web/wwwroot/css/site.scss
+++ b/Foody.Web/wwwroot/css/site.scss
@@ -1,7 +1,7 @@
-﻿@import url(variables.css);
-@import url(typography.css);
-@import url(navigation.css);
-@import url(menu.css);
+﻿@import "variables";
+@import "typography";
+@import "navigation";
+@import "menu";
 
 * {
     padding: 0;
